crates/service/tests/diagnostics/snapshots/features__diagnostics__mutated_immutable__array_copy.snap
---
source: crates/service/tests/diagnostics/mutated_immutable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 10,
          "character": 15
        },
        "end": {
          "line": 10,
          "character": 19
        }
      },
      "severity": 1,
      "code": "mutated-immutable",
      "source": "wat",
      "message": "mutating the immutable array `$dst` is not allowed",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 25
              }
            }
          },
          "message": "immutable array defined here"
        }
      ]
    }
  ]
}
