crates/service/tests/diagnostics/snapshots/features__diagnostics__mutated_immutable__immutable_array.snap
---
source: crates/service/tests/diagnostics/mutated_immutable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 14,
          "character": 14
        },
        "end": {
          "line": 14,
          "character": 21
        }
      },
      "severity": 1,
      "code": "mutated-immutable",
      "source": "wat",
      "message": "mutating the immutable array `$packed` is not allowed",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 9,
                "character": 2
              },
              "end": {
                "line": 9,
                "character": 27
              }
            }
          },
          "message": "immutable array defined here"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 14
        },
        "end": {
          "line": 7,
          "character": 15
        }
      },
      "severity": 1,
      "code": "mutated-immutable",
      "source": "wat",
      "message": "mutating the immutable array `0` is not allowed",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 20
              }
            }
          },
          "message": "immutable array defined here"
        }
      ]
    }
  ]
}
