crates/service/tests/diagnostics/snapshots/features__diagnostics__mutated_immutable__imported_immutable_global.snap
---
source: crates/service/tests/diagnostics/mutated_immutable.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 15
        },
        "end": {
          "line": 5,
          "character": 22
        }
      },
      "severity": 1,
      "code": "mutated-immutable",
      "source": "wat",
      "message": "mutating the immutable global `$global` is not allowed",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 37
              }
            }
          },
          "message": "immutable global defined here"
        }
      ]
    }
  ]
}
